debug server register

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ include(CPack)
 
 find_package(Threads)
 target_link_libraries(client ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(server ${CMAKE_THREAD_LIBS_INIT})
